external/SEP/src/seplib_base/lib/corelibs/include/sep_main_internal.h

int tetch_f_f(const char *arg, const char *typ, void *val);
int tetch_i_f(const char *arg, const char *typ, void *val);
int tetch_s_f(const char *arg, const char *typ, void *val);
int tetch_l_f(const char *arg, const char *typ, void *val);
int putch_f_f(const char *arg, const char *typ, void *val);
int putch_i_f(const char *arg, const char *typ, void *val);
int putch_s_f(const char *arg, const char *typ, void *val);
int putch_l_f(const char *arg, const char *typ, void *val);
int hetch_f_f_a(const char *arg, const char *typ, void *val);
int hetch_i_f_a(const char *arg, const char *typ, void *val);
int hetch_f_f(const char *arg, const char *typ, void *val);
int hetch_i_f(const char *arg, const char *typ, void *val);
int hetch_s_f(const char *arg, const char *typ, void *val);
int hetch_l_f(const char *arg, const char *typ, void *val);
int getch_f_f_a(const char *arg, const char *typ, void *val);
int getch_i_f_a(const char *arg, const char *typ, void *val);
int getch_f_f(const char *arg, const char *typ, void *val);
int getch_i_f(const char *arg, const char *typ, void *val);
int getch_s_f(const char *arg, const char *typ, void *val);
int getch_l_f(const char *arg, const char *typ, void *val);
int fetch_f_f(const char *arg, const char *typ, void *val);
int fetch_i_f(const char *arg, const char *typ, void *val);
int fetch_s_f(const char *arg, const char *typ, void *val);
int fetch_l_f(const char *arg, const char *typ, void *val);
int auxpar_f_f_a(const char *arg, const char *typ, void *val,const char *tag);
int auxpar_i_f_a(const char *arg, const char *typ, void *val,const char *tag);
int auxpar_f_f(const char *arg, const char *typ, void *val,const char *tag);
int auxpar_i_f(const char *arg, const char *typ, void *val,const char *tag);
int auxpar_s_f(const char *arg, const char *typ, void *val,const char *tag);
int auxpar_l_f(const char *arg, const char *typ, void *val,const char *tag);
int auxputch_f_f_a(const char *arg, const char *typ, void *val,const char *tag);
int auxputch_i_f_a(const char *arg, const char *typ, void *val,const char *tag);
int auxputch_f_f(const char *arg, const char *typ, void *val,const char *tag);
int auxputch_i_f(const char *arg, const char *typ, void *val,const char *tag);
int auxputch_s_f(const char *arg, const char *typ, void *val,const char *tag);
int auxputch_l_f(const char *arg, const char *typ, void *val,const char *tag);