external/SEP/src/seplib_base/include/sep_main_external.h

extern int doc(char*)  ;
extern int hclose(void)  ;
extern void initpar_f(char*);
extern int sep_prog_stat(char *fd,int i, int n,int send);
extern int doc();
extern int hclose();