external/SEP/src/seplib_base/include/sep3d.h

extern int sep_put_data_axis_par(const char *tag_history,int *i_axis,int *n,float *o,float *d,const char *label);
extern int sep_get_data_axis_par(const char *tag_history ,int *i_axis,int *n,float *o,float *d,char *label);
extern int sep_get_number_data_axes(const char *tag_histor,int *n_axes);
extern int sep_put_data_axis_par();
extern int sep_get_data_axis_par();
extern int sep_get_number_data_axes();